  * Also install usr/lib/llvm-12/lib/libomptarget.so.12 in libomp5-12

  [ Gianfranco Costamagna ]
  * Add upstream patch D92052 to fix a gcn offload compiler issue with gcc (Closes: #975692)

 -- Sylvestre Ledru <sylvestre@debian.org>  Sat, 30 Jan 2021 17:31:15 +0100

llvm-toolchain-12 (1:12.0.1-7) UNRELEASED; urgency=medium

  *  cmake: use ON instead of YES for consistency

  [  Gianfranco Costamagna ]
  * Add a patch to fix omp build on riscv64

 -- Sylvestre Ledru <sylvestre@debian.org>  Sun, 29 Aug 2021 15:15:18 +0200

llvm-toolchain-12 (1:12.0.1-6) unstable; urgency=medium

  * Fixup build process on riscv64, the architecture building was enabled
    in control file but not in rules file, neither required build-deps were
    installed. (note: this should fail, but at least we will have a build log
    stored.
  * Add ocaml support on riscv64.
  * Don't require hello package on i386 (helps Ubuntu alternate dependencies)

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Thu, 26 Aug 2021 15:33:24 +0200

llvm-toolchain-12 (1:12.0.1-5) unstable; urgency=medium

  [ Jordan Justen ]
  * Include SPIR-V (*.spv) outputs in libclc package

 -- Sylvestre Ledru <sylvestre@debian.org>  Wed, 25 Aug 2021 10:18:14 +0200

llvm-toolchain-12 (1:12.0.1-4) unstable; urgency=medium

  * Make libunwind-dev depends on libunwind
  * Don't build libunwind on hurd, armel, powerpc & mipsel
  * Remove old svn reference in the usage dh_strip & dh_makeshlibs

 -- Sylvestre Ledru <sylvestre@debian.org>  Mon, 16 Aug 2021 22:04:17 +0200

llvm-toolchain-12 (1:12.0.1-3) unstable; urgency=medium

  * Build libunwind only on amd64 arm64 armhf i386
    mips64el ppc64el ppc64 riscv64 sparc sparc64
    Not supported on s390x for example
  * libc++ & libc++ abi: only pass -DLIBCXXABI_USE_LLVM_UNWINDER=YES
    if libunwind is available on the platform

 -- Sylvestre Ledru <sylvestre@debian.org>  Sun, 01 Aug 2021 11:42:20 +0200

llvm-toolchain-12 (1:12.0.1-2) unstable; urgency=medium
