@@ -213,7 +213,10 @@ ifneq (,$(filter $(DEB_HOST_ARCH), s390x armel m68k mipsel hurd-i386 powerpc spa
   LIBUNWIND_ENABLE=no
 else
   PROJECTS+=;libunwind
-  CMAKE_LIBCXX_EXTRA += -DLIBCXXABI_USE_LLVM_UNWINDER=ON
+  CMAKE_LIBCXX_EXTRA += -DLIBCXXABI_USE_LLVM_UNWINDER=ON \
+	-DDLIBCXXABI_ENABLE_STATIC_UNWINDER=ON \
+	-DLIBCXXABI_STATICALLY_LINK_UNWINDER_IN_SHARED_LIBRARY=OFF \
+	-DLIBCXXABI_STATICALLY_LINK_UNWINDER_IN_STATIC_LIBRARY=ON
 endif
 
 RUN_TEST=yes
